--- a/client/src/components/Sidebar.css
+++ b/client/src/components/Sidebar.css
@@ -32,5 +32,7 @@
 }
 
 .Sidebar-listItem {
-    margin-bottom: 15px;
+    margin-bottom: 20px;
+    cursor: pointer;
+    width: fit-content;
 }
